--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,9 @@ services:
   namenode:
     image: bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8
     container_name: namenode
-    restart: no
     ports:
       - 9870:9870
-      - 9010:9000
+      - 9000:9000
     volumes:
       - hadoop_namenode:/hadoop/dfs/name
       - /home/hohoanghvy/IdeaProjects/hadoop-spark-project/input:/data/input
@@ -16,109 +15,79 @@ services:
       - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
     env_file:
       - ./hadoop.env
+    networks:
+      - spark-network
 
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
     container_name: datanode
-    restart: no
     volumes:
       - hadoop_datanode:/hadoop/dfs/data
     environment:
-      SERVICE_PRECONDITION: "namenode:9870"
-      CORE_CONF_fs_defaultFS: hdfs://namenode:9000
+      - SERVICE_PRECONDITION=namenode:9870
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
     ports:
-      - "9864:9864"
+      - 9864:9864
     env_file:
       - ./hadoop.env
-
-  resourcemanager:
-    image: bde2020/hadoop-resourcemanager:2.0.0-hadoop3.2.1-java8
-    container_name: resourcemanager
-    restart: no
-    environment:
-      SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864"
-    env_file:
-      - ./hadoop.env
-
-  nodemanager1:
-    image: bde2020/hadoop-nodemanager:2.0.0-hadoop3.2.1-java8
-    container_name: nodemanager
-    restart: no
-    environment:
-      SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 resourcemanager:8088"
-    env_file:
-      - ./hadoop.env
-
-  historyserver:
-    image: bde2020/hadoop-historyserver:2.0.0-hadoop3.2.1-java8
-    container_name: historyserver
-    restart: no
-    environment:
-      SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 resourcemanager:8088"
-    volumes:
-      - hadoop_historyserver:/hadoop/yarn/timeline
-    env_file:
-      - ./hadoop.env
+    networks:
+      - spark-network
 
   spark-master:
-    image: bde2020/spark-master:3.0.0-hadoop3.2
+    build:
+      context: ./spark-jupyter
+      dockerfile: SparkDockerfile
     container_name: spark-master
-    depends_on:
-      - namenode
-      - datanode
     ports:
-      - "8082:8080"
       - "7077:7077"
+      - "8080:8080"
     environment:
-      - INIT_DAEMON_STEP=setup_spark
-      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+      - SPARK_MODE=master
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+    networks:
+      - spark-network
 
   spark-worker-1:
-    image: bde2020/spark-worker:3.0.0-hadoop3.2
+    build:
+      context: ./spark-jupyter
+      dockerfile: SparkDockerfile
     container_name: spark-worker-1
     depends_on:
       - spark-master
     ports:
-      - "8083:8081"
+      - "8081:8081"
     environment:
-      - "SPARK_MASTER=spark://spark-master:7077"
-      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark-master:7077
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_CORES=1
+    networks:
+      - spark-network
 
-  hive-server:
-    image: bde2020/hive:2.3.2-postgresql-metastore
-    container_name: hive-server
-    depends_on:
-      - namenode
-      - datanode
-    env_file:
-      - ./hadoop-hive.env
+  jupyter:
+    image: jupyter/pyspark-notebook:python-3.10
+    container_name: jupyter
+    ports:
+      - 8888:8888
     environment:
-      HIVE_CORE_CONF_javax_jdo_option_ConnectionURL: "jdbc:postgresql://hive-metastore/metastore"
-      SERVICE_PRECONDITION: "hive-metastore:9083"
-    ports:
-      - "10000:10000"
+      - SPARK_MASTER=spark://spark-master:7077
+      - PYSPARK_PYTHON=python3
+      - PYSPARK_DRIVER_PYTHON=jupyter
+      - PYSPARK_DRIVER_PYTHON_OPTS=notebook
+    volumes:
+      - /home/hohoanghvy/IdeaProjects/hadoop-spark-project/input:/data/input
+      - /home/hohoanghvy/IdeaProjects/hadoop-spark-project/output:/data/output
+      - /home/hohoanghvy/IdeaProjects/hadoop-spark-project/notebook:/home/jovyan/school-lab
+      - /home/hohoanghvy/docker_container/hadoop-spark/jupyter-config:/home/jovyan/.jupyter
+    networks:
+      - spark-network
 
-  hive-metastore:
-    image: bde2020/hive:2.3.2-postgresql-metastore
-    container_name: hive-metastore
-    env_file:
-      - ./hadoop-hive.env
-    command: /opt/hive/bin/hive --service metastore
-    environment:
-      SERVICE_PRECONDITION: "namenode:9870 datanode:9864 hive-metastore-postgresql:5432"
-    ports:
-      - "9083:9083"
-
-  hive-metastore-postgresql:
-    image: bde2020/hive-metastore-postgresql:2.3.0
-    container_name: hive-metastore-postgresql
-
-  presto-coordinator:
-    image: shawnzhu/prestodb:0.181
-    container_name: presto-coordinator
-    ports:
-      - "8089:8089"
 volumes:
   hadoop_namenode:
   hadoop_datanode:
-  hadoop_historyserver:
+
+networks:
+  spark-network:
